Add block bench models & resource files Setup data gen Fix issues related to latest apexcore change